worker controller done
