# src/routes/v1/index.ts
@@ -1,5 +1,5 @@
 import { Router, Request, Response, NextFunction } from 'express';
-import { workerRouter, workerRouterWorkerId } from './worker';
+import workerRouter from './worker';
 // import shiftRouter from './shift';
 // import planRouter from './plan';
 
@@ -7,11 +7,6 @@ const router: Router = Router();
 
 router.get('/', (req: Request, res: Response, next: NextFunction) => {
   res.json({ msg: 'This is router v1.' })
-});
-
-router.get('/worker/:workerId', (req, res) => {
-  console.log(req.params);
-  res.json(req.params)
 });
 
 router.use('/worker', workerRouter);
