# src/routes/v1/worker/index.ts
@@ -1,5 +1,21 @@
-import { Router } from "express";
-import workerRouter from "./workerRouter";
-import workerRouterWorkerId from "./workerRouterWorkerId";
+import { Router, Request, Response } from "express";
 
-export { workerRouter, workerRouterWorkerId };
+import {
+  workersList,
+  createWorker,
+  deleteAllWorkers,
+  getWorker,
+  updateWorker,
+  deleteWorker,
+} from "../../../controllers/worker.controller";
+
+const router: Router = Router();
+
+router.get('/', workersList);
+router.post("/", createWorker);
+router.delete("/", deleteAllWorkers);
+router.get("/:workerId", getWorker);
+router.patch("/:workerId", updateWorker);
+router.delete("/:workerId", deleteWorker);
+
+export default router;
