# src/routes/v1/worker/workerRouter.ts
@@ -1,15 +1,0 @@
-import { Router } from "express";
-
-import {
-  workersList,
-  createWorker,
-  deleteAllWorkers,
-} from "../../../controllers/worker.controller";
-
-const router: Router = Router();
-
-router.get('/', workersList);
-router.post("/", createWorker);
-router.delete("/", deleteAllWorkers);
-
-export default router;
