# src/routes/v1/worker/workerRouterWorkerId.ts
@@ -1,15 +1,0 @@
-import { Router } from "express";
-
-import {
-  getWorker,
-  // updateWorker,
-  // deleteWorker
-} from "../../../controllers/worker.controller";
-
-const router: Router = Router();
-
-router.get('/', getWorker);
-// router.patch('/', updateWorker);
-// router.delete('/', deleteWorker);
-
-export default router;
